added head for path resolution

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 <link rel="stylesheet" href="styles/atom-one-dark-reasonable.css">
 <script src="highlight.pack.js"></script>
 <script>hljs.initHighlightingOnLoad();</script>
-
+<head> 
+    <base href="{{site.baseurl}}" />
+</head>
 <body class="black-theme before-load black-sidebar">
 <div class="loading">
     <h1>Hello, your page is loading, please wait :)<br> It may take up to several minutes.</h1>
