Fixed the jpg error

--- a/index.html
+++ b/index.html
@@ -681,7 +681,7 @@ break;
                 </div>
             </div>
             <div class="final-message"><div class="info"><p>This is the end of my portfolio. Thank you for reading it.<br> If you have any further questions, feel free to contact me.<br>
-                Thank you.</p><br><hr style="color:black;"><br><p> Junho Lee</p> <p> myfamily@snu.ac.kr</p> <a href="https://www.instagram.com/dif_eq/" style="text-decoration: underline;" target="_blank">instagram</a>  <p> +82)10-9801-0812</p> </div></div>
+                Thank you.</p><br><hr style="color:black;"><br><p> Junho Lee</p> <p> jl5992@columbia.edu</p> <a href="https://www.instagram.com/dif_eq/" style="text-decoration: underline;" target="_blank">instagram</a> </div></div>
         </section>
     </div>
     <!-- Footer -->
